--- a/ruleta/ruleta-magica.html
+++ b/ruleta/ruleta-magica.html
@@ -22,7 +22,7 @@
   <div>
     <canvas id="canvas" width="400" height="400"></canvas>
     <br>
-    <button id="iniciar">Elegir Ganador</button>
+    <button id="iniciar">Girar ruleta</button>
   </div>
 
 </div>
